[gd_scene load_steps=14 format=1]

[ext_resource path="res://fases/principal.gd" type="Script" id=1]
[ext_resource path="res://flapio.gd" type="Script" id=2]
[ext_resource path="res://sprites/01.png" type="Texture" id=3]
[ext_resource path="res://sprites/02.png" type="Texture" id=4]
[ext_resource path="res://flappy-bird-background-002.jpg" type="Texture" id=5]
[ext_resource path="res://componentes/Cano.tscn" type="PackedScene" id=6]
[ext_resource path="res://gerador.gd" type="Script" id=7]
[ext_resource path="res://pontuacaoTxt.fnt" type="BitmapFont" id=8]
[ext_resource path="res://pontoOgg.ogg" type="AudioStream" id=9]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 639.5, 0.117491 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 44.1204

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Principal",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]

resource/name = "Fundo"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Fundo/Fundo1:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 318.463, 537.266 ), Vector2( -317.309, 537.266 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fundo/Fundo2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 933.451, 537.266 ), Vector2( 298.254, 537.266 ) ]
}

[node name="Jogo" type="Node2D"]

z/z = 1
script/script = ExtResource( 1 )

[node name="Limites" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 5.5518, 862.388 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Cima" type="CollisionShape2D" parent="Limites"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Baixo" type="CollisionShape2D" parent="Limites"]

transform/pos = Vector2( 5.5518, 862.388 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1

[node name="Flapio" type="RigidBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 112.7, 358.283 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -15.0222, 24.5789 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 15.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 2 )

[node name="FlapioAnim" type="AnimatedSprite" parent="Flapio"]

transform/pos = Vector2( -3.39188, 11.4946 )
transform/scale = Vector2( 0.727073, 0.727073 )
z/z = 1
frames = SubResource( 3 )
animation = "Principal"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flapio"]

transform/pos = Vector2( -15.0222, 24.5789 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Fundo" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Fundo = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Fundo"

[node name="Fundo1" type="Sprite" parent="Fundo"]

transform/pos = Vector2( 318.463, 537.266 )
transform/scale = Vector2( 1.25593, 1.25593 )
texture = ExtResource( 5 )

[node name="Fundo2" type="Sprite" parent="Fundo"]

transform/pos = Vector2( 933.451, 537.266 )
transform/scale = Vector2( 1.25593, 1.25593 )
texture = ExtResource( 5 )

[node name="Gerador" type="Node2D" parent="."]

editor/display_folded = true

[node name="Cano" parent="Gerador" instance=ExtResource( 6 )]

transform/pos = Vector2( 526.427, 477.751 )
transform/scale = Vector2( 1.80144, 2.17363 )

[node name="Timer" type="Timer" parent="Gerador"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="Ponto" type="Position2D" parent="Gerador"]

transform/pos = Vector2( 679.738, 468.896 )
script/script = ExtResource( 7 )

[node name="GameOver" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="PreInterface" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 305, 23 )
z/z = 6

[node name="Interface" type="Control" parent="PreInterface"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -305.0
margin/top = -23.0
margin/right = -265.0
margin/bottom = 17.0

[node name="Label" type="Label" parent="PreInterface/Interface"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 231.0
margin/top = 27.0
margin/right = 335.0
margin/bottom = 208.0
custom_fonts/font = ExtResource( 8 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Ponto" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="timeout" from="Gerador/Timer" to="Gerador/Ponto" method="_on_Timer_timeout"]

[connection signal="timeout" from="GameOver" to="." method="_on_GameOver_timeout"]


